Initial POC of API using multi-tenant registry.
